--- a/add.html
+++ b/add.html
@@ -13,9 +13,9 @@
         <div style="text-align: center; font-size: 20px; font-weight: 800;">添加用户信息</div>
         <form action="/" method="POST">
             <p>id：</p><input type="number" name="id" value="<%=id %>" class="name">
-            <p>姓名：</p><input type="text" name="名字" value="<%=obj.名字 %>"   class="name">
-            <p>昵称：</p><input type="text" name="昵称" value="<%=obj.昵称 %>"  class="password"> <br>
-            <p>用户名：</p><input type="text" name="用户名" value="<%=obj.用户名 %>" class="desction"> <br>
+            <p>名称：</p><input type="text" name="名称" value="<%=obj.名称 %>"   class="name">
+            <p>工资：</p><input type="text" name="工资" value="<%=obj.工资 %>"  class="password"> <br>
+            <p>公司名：</p><input type="text" name="公司名" value="<%=obj.公司名 %>" class="desction"> <br>
             <!-- <p>邮箱号：</p><input type="text" name="email" class="email"><br> -->
             <br>
             <input type="submit" value="确认" style="margin-left:79px;width: 77px;height: 42px;border-radius: 10px;">
