--- a/search.html
+++ b/search.html
@@ -21,33 +21,29 @@
 </head>
 
 <body>
-    <form action="/index1/a" method="POST">
+    <form action="/index1/c" method="POST">
         <table>
             <tr>
-                <td><input name="z_id" type="hidden"></td>
+                
+                <td><input name="z_id" type="hidden" ></td>
             </tr>
-
             <tr>
                 <td>id</td>
-                <td><input name="id" type="number"></td>
+                <td><input name="id" type="number" ></td>
             </tr>
-
             <tr>
                 <td>名称</td>
-                <td><input name="name" type="text"></td>
+                <td><input name="name" type="text" ></td>
             </tr>
             <tr>
                 <td>工资</td>
-                <td><input name="salary" type="text"></td>
+                <td><input name="salary" type="text" ></td>
             </tr>
             <tr>
                 <td>公司名</td>
-                <td><input name="company" type="text"></td>
+                <td><input name="company" type="text" ></td>
             </tr>
-            <tr>
-                <td>上传图片</td>
-                <td><input type="file"></td>
-            </tr>
+         
             <tr>
                <td></td>
                 <td><input type="submit" value="提交"></td>
